# ccplugin_demo

embed-source/NewProject/: package.json
embed-source/NewProject/assets/: scene.scene
embed-source/NewProject/native/engine/common/: CMakeLists.txt
embed-source/NewProject/native/engine/common/Classes/aes-glue/: aes-glue.cpp
embed-src-static-lib/NewProject/native/engine/android/instantapp/: build.gradle
embed-src-static-lib/NewProject/native/engine/common/: CMakeLists.txt
embed-src-static-lib/NewProject/native/engine/common/Classes/: Game.cpp
embed-src-static-lib/NewProject/native/engine/common/Classes/aes-glue/: aes-glue.cpp
embed-src-static-lib/NewProject/native/engine/win64/: CMakeLists.txt  Post-LinkAES.cmake
native-plugin-usecase/NewProject/native/engine/android/: Pre-AutoLoadPlulgins.cmake
native-plugin-usecase/NewProject/native/engine/android/app/: AndroidManifest.xml  build.gradle
native-plugin-usecase/NewProject/native/engine/android/instantapp/: AndroidManifest.xml
native-plugin-usecase/NewProject/native/engine/common/: CMakeLists.txt
native-plugin-usecase/NewProject/native/engine/win64/: Pre-AutoLoadPlulgins.cmake
native-plugin-usecase/NewProject/native/plugins/aes/: cc_plugin.json
plugin-dev/: .gitignore  CMakeLists.txt  Config.cmake.in  build-android.sh  build-ios.sh  build-mac.sh
plugin-dev/aes_glue/src/: aes-glue.cpp
plugin-dev/src/: hello_cocos.cpp
plugin-only/NewProject/: package.json
plugin-only/NewProject/native/engine/android/: CMakeLists.txt  Post-LinkAES.cmake  Pre-AutoLoadPlulgins.cmake
plugin-only/NewProject/native/engine/android/app/: build.gradle
plugin-only/NewProject/native/engine/win64/: Pre-AutoLoadPlulgins.cmake
plugin-only/NewProject/native/plugins/aes/android/arm64-v8a/lib/cmake/: aes-targets-release.cmake
plugin-only/NewProject/native/plugins/aes/android/x86/lib/cmake/: aes-config.cmake  aes-targets.cmake  aes_glue-targets.cmake
plugin-only/NewProject/native/plugins/aes/android/x86/lib/cmake/aes_glue/: aes_glue-targets-release.cmake
plugin-only/NewProject/native/plugins/aes/android/x86_64/lib/cmake/: aes_glue-config.cmake
plugin-only/NewProject/native/plugins/aes/android/x86_64/lib/cmake/AES/: AES-config.cmake
plugin-only/NewProject/native/plugins/aes/windows/lib/cmake/AES/: AES-targets-release.cmake
